# ThreadProjekt

./: CMakeLists.txt  dynamicarray.c  dynamicarray.h  functions.c  functions.h  main.c  stackandqueue.c  stackandqueue.h
